[package]
name = "solana-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bs58 = "0.5"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
ed25519-dalek = "1.0"
spl-associated-token-account = "2.3.0"


